--- a/main/socialLink/templates/socialLink/index.html
+++ b/main/socialLink/templates/socialLink/index.html
@@ -19,10 +19,8 @@
 	<div class="previews">
 		<div class="linkedin">
 			<h1>LinkedIn</h1>
-			<div class="tweet">
-				<p class="tweet-body">This is a tweet, a really long Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae molestias, dolorem neque sunt consequatur, ea cumque. Soluta possimus, animi doloribus natus sequi rem aliquam at fuga minus! Unde facilis, obcaecati.</p>
-				<p class="tweet-date">1/1/1970</p>
-			</div>
+			<script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+			<script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/samy-achour-035218b3" data-format="inline" data-related="false"></script>
 		</div>
 
 
