--- a/main/socialLink/static/socialLink/style.css
+++ b/main/socialLink/static/socialLink/style.css
@@ -51,6 +51,7 @@
 .search button {
 	border-radius: 10px;
 	margin-left: 15px;
+	margin-top: 10px;
 
 }
 
@@ -62,4 +63,8 @@
 body {
 	font-family: sans-serif;
 	background-color: #EAEAEA;
+}
+
+.search-input {
+	width:100%;
 }
